<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:checked="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewAutoconnect"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:text="Finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="onTapRead"
        android:text="@string/button_read"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewReadValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewReadValue" />

    <TextView
        android:id="@+id/textViewReadValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/button_read"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewReadHint" />

    <Button
        android:id="@+id/buttonWrite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onTapWrite"
        android:layout_marginStart="10dp"
        android:text="진동"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/textViewLifecycleState"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewIndicateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIndicateHint" />

    <!--<TextView
        android:id="@+id/textViewWriteHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_static_write_hint"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/editTextWriteValue"
        app:layout_constraintTop_toBottomOf="@+id/textViewReadValue" />
-->
    <TextView
        android:id="@+id/textViewReadHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_static_read_hint"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/textViewReadValue"
        app:layout_constraintTop_toBottomOf="@+id/textViewLifecycleState" />

    <TextView
        android:id="@+id/textViewIndicateHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_static_indicate_hint"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textViewIndicateValue"
        app:layout_constraintTop_toBottomOf="@+id/buttonWrite" />

    <TextView
        android:id="@+id/textViewWaterSensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Water Sensor: N/A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewIndicateHint" />

    <TextView
        android:id="@+id/textViewAccelSensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Accelerometer: N/A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewWaterSensor" />

    <ScrollView
        android:id="@+id/scrollViewLog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIndicateValue"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textViewLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_default_logs_value" />

    </ScrollView>

    <TextView
        android:id="@+id/textViewAutoconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_static_autoconnect"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:includeFontPadding="false"
        android:minWidth="48dip"
        android:minHeight="32dip"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        android:paddingRight="8dp"
        android:paddingBottom="4dp"
        android:text="reset"
        app:layout_constraintEnd_toStartOf="@id/scrollViewLog"
        app:layout_constraintTop_toTopOf="@id/scrollViewLog" />

<!--    <Button
        android:id="@+id/buttonClearLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:includeFontPadding="false"
        android:minWidth="48dip"
        android:minHeight="32dip"
        android:onClick="onTapClearLog"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        android:paddingRight="8dp"
        android:paddingBottom="4dp"
        android:text="@string/button_clear_log"
        app:layout_constraintEnd_toEndOf="@+id/scrollViewLog"
        app:layout_constraintTop_toTopOf="@+id/scrollViewLog" />-->

    <TextView
        android:id="@+id/textViewLifecycleState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_state_disconnected"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAutoconnect" />

<!--    <TextView
        android:id="@+id/textViewSubscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/text_not_subscribed"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewIndicateHint"
        app:layout_constraintEnd_toEndOf="parent" />-->

    <TextView
        android:id="@+id/swimmingStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="수영 상태"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAccelSensor" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/walkingImage"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="90dp"
        android:src="@drawable/directions_walk_24px"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/swimmingStatus" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/swimmingImage"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:src="@drawable/pool_24px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/swimmingStatus" />


    <TextView
        android:id="@+id/swimmingTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="수영 시간"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swimmingStatus" />

    <Chronometer
        android:id="@+id/swimChronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@id/swimmingTime"
        app:layout_constraintTop_toBottomOf="@id/swimmingStatus" />

    <TextView
        android:id="@+id/swimMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="수영 모드"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swimmingTime" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swimModeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toEndOf="@id/swimMode"
        app:layout_constraintTop_toBottomOf="@id/swimmingTime" />

    <RadioGroup
        android:id="@+id/timeRadioGroup"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio="9:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swimMode">

        <RadioButton
            android:id="@+id/time15m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:gravity="center"
            android:text="@string/time_15min"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/time20m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:gravity="center"
            android:text="@string/time_20min"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/time25m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:gravity="center"
            android:text="@string/time_25min"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/time30m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:gravity="center"
            android:text="@string/time_30min"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/fallingStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="넘어짐 상태"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeRadioGroup" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/walkingImageTwo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="90dp"
        android:src="@drawable/directions_walk_24px"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/fallingStatus" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fallingImage"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:src="@drawable/falling_24px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/fallingStatus" />

</androidx.constraintlayout.widget.ConstraintLayout>